[package]
name = "tsap_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsap_macro"
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1"
proc-macro-error = "1"
syn = { version = "1", features = ["extra-traits", "full"]}
prettyplease = "0.1"

[features]
default = []
toml = []
impl_try = []
